tests/expectations/compiler/structs/inline_member_pass.out
Error [EPAR0370005]: expected an identifier, ')', 'constant', 'private', 'public' -- found 'let'
    --> compiler-test:7:13
     |
   7 |     fn main(let x: u8, y: bool) -> bool {
     |             ^^^
